# 21f1005042.github.io

./: .gitignore  404.html  README.md  index.html  pyproject.toml  streak.py
.github/workflows/: pytest.yml
tests/: test_streak.py
