[project]
name = "streak-finder"
version = "0.1.0"
description = "A simple package to find the longest positive streak in a list of numbers."
authors = [{ name = "Jules", email = "jules@example.com" }]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/example/streak-finder"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["streak"]